# Gold-Miner

./: BoardSettings.h  CMakeLists.txt  Controller.cpp  Levels.h  Main.cpp  SoundsSettings.h  TexturesSettings.h
